<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context="com.kyleduo.switchbuttondemo.UseActivity">

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/use_listener"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<com.kyleduo.switchbutton.SwitchButton
				android:id="@+id/sb_use_listener"
				style="@style/SwitchButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<TextView
				android:id="@+id/listener_finish"
				style="@style/StyleTitleText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="16dp"
				android:text="@string/use_listener_finish"/>
		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:background="#cccccc"/>

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/use_delay"/>

		<com.kyleduo.switchbutton.SwitchButton
			android:id="@+id/sb_use_delay"
			style="@style/SwitchButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:kswTintColor="#16A560"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:background="#cccccc"/>

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/use_check_in_check"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<com.kyleduo.switchbutton.SwitchButton
				android:id="@+id/use_focus_open"
				style="@style/SwitchButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<com.kyleduo.switchbutton.SwitchButton
				android:id="@+id/use_focus_open_control"
				style="@style/SwitchButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:kswTintColor="#D02E21"/>

		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:background="#cccccc"/>

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/use_long"/>

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/use_long_hint"
			android:textSize="12sp"/>

		<Button
			android:id="@+id/long_start"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/bt_start"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:gravity="center_vertical">

			<com.kyleduo.switchbutton.SwitchButton
				android:id="@+id/sb_use_long"
				style="@style/SwitchButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:focusable="false"/>

			<ProgressBar
				android:id="@+id/pb"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@id/sb_use_long"/>
		</RelativeLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:background="#cccccc"/>

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/use_toggle"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<com.kyleduo.switchbutton.SwitchButton
				android:id="@+id/sb_use_toggle"
				style="@style/SwitchButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:focusable="false"/>

			<LinearLayout
                android:id="@+id/toggle_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@id/sb_use_toggle"
				android:orientation="vertical">

				<Button
					android:id="@+id/toggle_ani"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/toggle_animated"
					android:textAllCaps="false"
					android:textSize="12sp"/>

                <Button
                    android:id="@+id/toggle_ani_no_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_animated_no_event"
                    android:textAllCaps="false"
                    android:textSize="12sp"/>

				<Button
					android:id="@+id/toggle_not_ani"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/toggle_not_animated"
					android:textAllCaps="false"
					android:textSize="12sp"/>

                <Button
                    android:id="@+id/toggle_not_ani_no_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_not_animated_no_event"
                    android:textAllCaps="false"
                    android:textSize="12sp"/>
			</LinearLayout>
		</RelativeLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:background="#cccccc"/>

		<TextView
			style="@style/StyleTitleText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/use_checked"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">

			<com.kyleduo.switchbutton.SwitchButton
				android:id="@+id/sb_use_checked"
				style="@style/SwitchButtonStyleMD"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:focusable="false"/>

			<LinearLayout
                android:id="@+id/check_wrapper"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@id/sb_use_checked"
				android:orientation="vertical">

				<Button
					android:id="@+id/checked_ani"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/checked_animated"
					android:textAllCaps="false"
					android:textSize="12sp"/>

                <Button
                    android:id="@+id/checked_ani_no_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checked_animated_no_event"
                    android:textAllCaps="false"
                    android:textSize="12sp"/>

				<Button
					android:id="@+id/checked_not_ani"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/checked_not_animated"
					android:textAllCaps="false"
					android:textSize="12sp"/>

                <Button
                    android:id="@+id/checked_not_ani_no_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checked_not_animated_no_event"
                    android:textAllCaps="false"
                    android:textSize="12sp"/>
			</LinearLayout>
		</RelativeLayout>
	</LinearLayout>

</ScrollView>